improved bugs: header and footer align, checkbox, right block height, some media queries

--- a/css/main.css
+++ b/css/main.css
@@ -148,12 +148,32 @@ header {
   box-shadow: 0px -1px 6px rgba(0, 0, 0, 0.22);
   padding: 15px 0 13px 75px;
 }
+@media screen and (max-width: 992px) {
+  header {
+    text-align: center;
+    padding: 15px 0 13px 0;
+  }
+}
 main {
   -webkit-box-flex: 1;
   -moz-box-flex: 1;
   -webkit-flex: 1 1 auto;
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
+}
+@media screen and (max-width: 768px) {
+  main {
+    background: #F1F3F5;
+  }
+}
+@media screen and (max-width: 1024px) and (height: 1366px) {
+  main {
+    -webkit-box-flex: 0;
+    -moz-box-flex: 0;
+    -webkit-flex: 0 1 auto;
+    -ms-flex: 0 1 auto;
+    flex: 0 1 auto;
+  }
 }
 main .row {
   display: -webkit-box;
@@ -168,7 +188,6 @@ main .row {
   -webkit-flex-direction: row;
   -ms-flex-direction: row;
   flex-direction: row;
-  height: calc(90vh);
   margin: 0 -75px;
 }
 @media screen and (max-width: 992px) {
@@ -235,7 +254,7 @@ main .row .block-right {
 }
 main .row .block-right .block-right-body {
   width: 335px;
-  margin: 130px auto 0 auto;
+  margin: 136px auto 107px auto;
 }
 main .row .block-right .signup-links {
   display: -webkit-box;
@@ -273,12 +292,12 @@ main .row .block-right .signup-form input:focus {
 main .row .block-right .signup-form .signup-form__field {
   border: 1px solid #E4E4E4;
   border-radius: 55px;
-  padding: 10px 0 9px 23px;
+  padding: 12px 0 12px 23px;
   font-weight: 300;
   color: #b3b3b3;
 }
 main .row .block-right .signup-form .signup-form__button input {
-  padding: 10px 0 9px 0;
+  padding: 8px 0 8px 0;
   text-align: center;
   border-radius: 55px;
   font-size: 18px;
@@ -318,11 +337,10 @@ main .row .block-right .signup-form .signup-form-restore__fake {
 main .row .block-right .signup-form .signup-form-restore__fake::before {
   content: "";
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-57%, -55%);
-  width: 8px;
-  height: 8px;
+  top: 0;
+  left: 0;
+  width: 15px;
+  height: 15px;
   background-color: #AF272F;
   opacity: 0;
   transition: .2s;
@@ -410,6 +428,12 @@ footer {
   color: #ffffff;
   font-weight: 300;
   padding: 15px 0 13px 75px;
+}
+@media screen and (max-width: 992px) {
+  footer {
+    text-align: center;
+    padding: 15px 0 13px 0;
+  }
 }
 /*@media (max-width: 1200px) {
 	.container {
